fixed 5 days forecast alignment

--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -13,10 +13,10 @@
 .tab-forecast {
   background-color: rgba(4, 43, 58, 0.5);
   border-radius: 40%;
-  margin-left: 25px;
+  margin-left: 5px;
   margin-right: 5px;
 }
-@media (max-width: 800px) {
+@media (max-width: 900px) {
   .WeatherForecast {
     display: flex;
     justify-content: space-evenly;
@@ -26,12 +26,14 @@
     font-size: smaller;
   }
   .icon-sm {
-    width: 41px;
-    height: 41px;
+    width: 35px;
+    height: 35px;
   }
   .tab-forecast {
     background-color: rgba(4, 43, 58, 0.5);
     border-radius: 40%;
-    margin-left: 3px;
+    font-size: smaller;
+    display: flex;
+    justify-content: space-evenly;
   }
 }
